<resources>
    <string name="app_name">SpotyMedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_artist">Search Artist</string>
    <string name="artist_name">Artist name</string>
    <string name="artist_image">Artist Image</string>
    <string name="album_image">Album Image</string>
    <string name="top_track_name">Top Track Name</string>
    <string name="artists_genres">Artists genres</string>
    <string name="followers_icon">Followers Icon</string>
    <string name="rating_icon">Rating Icon</string>
    <string name="followers">Followers</string>
    <string name="ranking">Ranking</string>
    <string name="album_name">Album Name</string>
    <string name="duration_icon">Duration Icon</string>
    <string name="duration_track">Duration Track</string>
    <string name="album_date">Album Date</string>
    <string name="tracks">Tracks</string>
    <string name="realeses">Realeses</string>
    <string name="feature_by">Feature By</string>
    <string name="releases">Releases</string>
</resources>