<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/artTopTrackImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/album_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/artTopTrackNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/top_track_name"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/artTopTrackImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artTopTrackAlbumNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/album_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/artTopTrackRankingIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/artTopTrackImage"
            app:layout_constraintTop_toBottomOf="@+id/artTopTrackNameText" />

        <ImageView
            android:id="@+id/artTopTrackDurationIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/duration_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/artTopTrackImage"
            app:srcCompat="@drawable/ic_baseline_watch_later_24" />

        <TextView
            android:id="@+id/artTopTrackDurationText"
            android:layout_width="65dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/duration_track"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/artTopTrackDurationIcon" />

        <TextView
            android:id="@+id/artTopTrackRankingText"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ranking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/artTopTrackRankingIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/rating_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/artTopTrackRankingText"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>