<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/relatedTrackImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/album_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/artTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/artist_name"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relatedTrackImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artTextGenres"
            android:layout_width="233dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/artists_genres"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/relatedTrackImage"
            app:layout_constraintTop_toBottomOf="@+id/artTextName" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/followers_icon"
            android:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toStartOf="@+id/artistFollowersText"
            app:layout_constraintStart_toEndOf="@+id/relatedTrackImage"
            app:layout_constraintTop_toBottomOf="@+id/artTextGenres"
            app:srcCompat="@drawable/ic_baseline_follow_the_signs_24" />

        <TextView
            android:id="@+id/artistFollowersText"
            android:layout_width="60dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/followers"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/artTextGenres" />

        <TextView
            android:id="@+id/artistRankingText"
            android:layout_width="82dp"
            android:layout_height="21dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/ranking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artTextGenres" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/rating_icon"
            app:layout_constraintEnd_toStartOf="@+id/artistRankingText"
            app:layout_constraintTop_toBottomOf="@+id/artTextGenres"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>