<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="747dp"
        tools:context=".ui.artist.ArtistFragment">


        <ImageView
            android:id="@+id/artImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/artist_image" />

        <TextView
            android:id="@+id/artTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/artist_name"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/artImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artistFragmentGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/artists_genres"
            app:layout_constraintEnd_toStartOf="@+id/artImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artTextName" />

        <ImageView
            android:id="@+id/artistFragmentFollowers"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"

            android:layout_marginBottom="16dp"
            android:contentDescription="@string/followers_icon"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toTopOf="@+id/artistTabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_follow_the_signs_24" />

        <TextView
            android:id="@+id/artistFragmentFollowersText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toTopOf="@+id/artistTabLayout"
            app:layout_constraintStart_toEndOf="@+id/artistFragmentFollowers"
            tools:text="509878654" />

        <TextView
            android:id="@+id/artistFragmentRankingText"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/montserrat"
            tools:text="99"
            app:layout_constraintBottom_toTopOf="@+id/artistTabLayout"
            app:layout_constraintEnd_toStartOf="@+id/artImage" />

        <ImageView
            android:id="@+id/artistFragmentRanjungIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/rating_icon"
            app:layout_constraintBottom_toTopOf="@+id/artistTabLayout"
            app:layout_constraintEnd_toStartOf="@+id/artistFragmentRankingText"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/artistTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/artistViewPager2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artImage" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/artistViewPager2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistTabLayout"
            app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>